fixed with of page to avoid design-break on 17-monitors
darcs-hash:20060309195114-ffd4a-582be8888025aeff99b272d0ae845339be6e0628.gz

--- a/design.css
+++ b/design.css
@@ -50,16 +50,17 @@ div.dokuwiki div.right_sidebar {
 div.dokuwiki div.right_page {
   text-align: justify;
   float:left;
-  width:72%;
-  padding:1em;
-  margin-left:1em;
+  width:70%;
+  padding:15px;
+  margin-left:1%;
 }
 
 div.dokuwiki div.left_page {
   text-align: justify;
   float:left;
-  width:72%;
-  padding:1em;
+  width:70%;
+  padding:15px;
+  margin-left:1%;
 }
 
 div.dokuwiki table {
